<resources>
    <string name="app_name">FlowExample</string>
    <string name="channel_name">데이터 파이프라인</string>
    <string name="verification_email_title">Email</string>
    <string name="verification_email_input_email">이메일을 입력해주세요.</string>
    <string name="verification_email_hint">Input Email</string>
    <string name="verification_code_title">인증번호를 입력해 주세요</string>
    <string name="verification_code_hint">인증번호 4자리</string>
    <string name="verification_code_retry">재발송</string>
    <string name="verification_code_failed">이메일 인증이 실패하였습니다</string>
    <string name="login">로그인</string>
    <string name="id_hint">ID 입력</string>
    <string name="password_hint">비밀번호 입력</string>
    <string name="confirm">확인</string>


</resources>