<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.csi.flowexample.ui.main.signin.viewmodel.EmailVerifyViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@android:color/white">

        <TextView
            android:id="@+id/tv_title"
            style="@style/HeadH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_input_layout"
            style="@style/Widget.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                style="@style/GrTitle1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="-3dp"
                android:layout_marginEnd="-3dp"
                android:cursorVisible="true"
                android:hint="@string/id_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/tv_password"
                android:nextFocusForward="@id/tv_password"
                android:paddingBottom="12dp"
                android:textColorHint="#4c000000" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/GrTitle1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="-3dp"
                android:layout_marginEnd="-3dp"
                android:cursorVisible="true"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/tv_password"
                android:nextFocusForward="@id/tv_password"
                android:paddingBottom="12dp"
                android:textColorHint="#4c000000" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_button"
            android:text="@string/confirm"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>