<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.csi.flowexample.ui.main.signin.viewmodel.EmailVerifyViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@android:color/white">

        <TextView
            android:id="@+id/tv_input_email"
            style="@style/HeadH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:text="@string/verification_email_input_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="이메일 주소를 입력해주세요" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                style="@style/GrTitle1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="-3dp"
                android:layout_marginEnd="-3dp"
                android:cursorVisible="true"
                android:hint="@string/verification_email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/tv_password"
                android:nextFocusForward="@id/tv_password"
                android:paddingBottom="12dp"
                app:bindText="@{viewModel.emailAddress}"
                android:textColorHint="#4c000000" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_init"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:enabled="@{viewModel.buttonEnabled}"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:importantForAccessibility="no"
            android:lineSpacingExtra="8sp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_init"
            app:layout_constraintLeft_toLeftOf="@+id/btn_init"
            app:layout_constraintRight_toRightOf="@+id/btn_init"
            app:layout_constraintTop_toTopOf="@+id/btn_init" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>