<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.SignInActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.csi.flowexample.ui.main.signin.viewmodel.EmailVerifyWaitingViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:background="@android:color/white">

            <TextView
                android:id="@+id/tv_code_verification_title"
                style="@style/HeadH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/verification_code_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_input_layout"
                style="@style/Widget.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:endIconMode="clear_text"
                app:endIconTint="@null"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_code_verification_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_code"
                    style="@style/GrTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="-3dp"
                    android:layout_marginEnd="-3dp"
                    android:cursorVisible="true"
                    android:hint="@string/verification_code_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/hint"
                    app:bindText="@{viewModel.confirmCode()}" />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/remaining_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_code_time"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/code_input_layout"
                tools:layout_editor_absoluteX="0dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_remaining_time"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:textColor="@color/secondary_blue"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@{viewModel.waitingCodeTime()}"
                    tools:text="남은시간 03:59"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_retry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.5"
                    android:drawableEnd="@drawable/ic_baseline_refresh_24"
                    android:drawablePadding="6dp"
                    android:gravity="end|center_vertical"
                    android:lineSpacingExtra="4sp"
                    android:onClick="@{() -> viewModel.onClickRetry()}"
                    android:padding="10dp"
                    android:text="@string/verification_code_retry"
                    android:textColor="@color/black_sub"
                    android:textSize="12dp"
                    android:visibility="@{viewModel.enableRetryBtn()? View.VISIBLE : View.INVISIBLE, default = invisible}"
                    tools:visibility="visible"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tv_start_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="3sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_horizontal"
                android:text="@{viewModel.waitingRetryTime()}"
                android:textColor="@color/black_sub"
                android:textSize="14sp"
                app:layout_constrainedWidth="true"
                android:visibility="@{viewModel.enableRetryBtn()? View.INVISIBLE : View.VISIBLE, default = visible}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remaining_time"
                tools:text="60초 후에 인증번호를 재발송 할 수 있습니다."
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>